# OneCompression

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml
benchmark/: .gitignore  README.md
benchmark/llama3-8b-gptq/: .gitignore  README.md  quant_benchmark.py
benchmark/llama3-8b-gptq/conf/: benchmark_llama3-8b.yaml
benchmark/llama3-8b-jointq/: .gitignore  README.md  quant_benchmark.py
benchmark/llama3-8b-jointq/conf/: benchmark_llama3-8b.yaml
benchmark/llama3-8b-lpcd-gptq/: README.md  quant_benchmark.py
benchmark/llama3-8b-lpcd-gptq/conf/: benchmark_llama3-8b.yaml
benchmark/llama3-8b-qep-gptq/: README.md  quant_benchmark.py
benchmark/llama3-8b-qep-gptq/conf/: benchmark_llama3-8b.yaml
benchmark/llama3-8b-various/: README.md  quant_benchmark.py
benchmark/qwen3-14b-gptq/: README.md  quant_benchmark.py
benchmark/qwen3-14b-jointq/: .gitignore  README.md  quant_benchmark.py
benchmark/qwen3-14b-jointq/conf/: benchmark_qwen3-14b.yaml
benchmark/qwen3-8b-gptq/: README.md  quant_benchmark.py
benchmark/qwen3-8b-jointq/: .gitignore  README.md  quant_benchmark.py
benchmark/qwen3-8b-jointq/conf/: benchmark_qwen3-8b.yaml
docs/: contributing.md  index.md
docs/algorithms/: dbf.md  gptq.md  jointq.md  lpcd.md  overview.md  qep.md  rtn.md
docs/api/: index.md  lpcd_config.md  model_config.md  pre_process.md  qep_config.md  quantized_model_loader.md  runner.md  utilities.md
docs/api/quantizers/: autobit.md  base.md  dbf.md  gptq.md  jointq.md  rtn.md
docs/getting-started/: installation.md  quickstart.md
docs/user-guide/: basic-usage.md  cli.md  configuration.md  examples.md  pre-process.md  vllm-inference.md
example/: .gitignore  example3.py  example_auto_run.py  example_autobit.py  example_gptq.py  example_jointq.py  example_lpcd_gptq.py  example_qep_gptq.py  example_save_load.py
example/post_process/: example_blockwise_ptq.py  example_lora_sft.py  example_lora_sft_knowledge.py
example/pre_process/: example_llama_preprocess_rtn.py  example_preprocess_save_load.py
example/vllm_inference/: example_autobit_vllm_inference.py  example_gptq_vllm_inference.py
model_validation/: .gitignore  README.md
model_validation/autobit/: README.md  validate_autobit.py
model_validation/autobit_qep/: README.md  validate_autobit.py
model_validation/basic/: README.md  validate_autobit.py
model_validation/gptq/: README.md  validate_gptq.py  validate_load.py  validate_vllm.py
model_validation/gptq/conf/: validate.yaml  validate_load.yaml  validate_vllm.yaml
model_validation/jointq/: README.md  validate_jointq.py
model_validation/qep_gptq/: README.md  validate_gptq.py
onecomp/: __init__.py  __main__.py  __version__.py  cli.py  log.py  model_config.py  quantized_model_loader.py  rotated_model_config.py  runner.py
onecomp/analyzer/: __init__.py  quantization_error.py
onecomp/calibration/: __init__.py  calibration_data_loader.py
onecomp/lpcd/: __init__.py  _gradient_solver.py  _lpcd_config.py  _lpcd_runner.py  _metric.py  _refiner.py
onecomp/lpcd/arch/: _llama.py  _llama_cf.py  _qwen3.py
onecomp/post_process/: blockwise_ptq.py
onecomp/post_process/_blockwise/: gptq_block_optimizer.py
onecomp/pre_process/: __init__.py  hadamard_utils.py  modeling_llama.py  modeling_qwen3.py  optimizer.py  prepare_rotated_model.py  preprocess_args.py  quant_models.py  rotation_utils.py  train_rotation.py
onecomp/qep/: __init__.py  _qep_config.py  _quantize_with_qep.py  _quantize_with_qep_arch.py
onecomp/quantizer/: __init__.py  _quantizer.py  gemlite.py
onecomp/quantizer/arb/: _arb.py  arb_impl.py
onecomp/quantizer/autobit/: __init__.py  _autobit.py  activation_stats.py  dbf_fallback.py  ilp.py  manual.py  visualize.py
onecomp/quantizer/cq/: _cq.py
onecomp/quantizer/dbf/: _dbf.py  dbf_impl.py  dbf_layer.py  dbf_original.py
onecomp/quantizer/gptq/: _gptq.py  gptq_layer.py
onecomp/quantizer/jointq/: _jointq.py
onecomp/quantizer/jointq/core/: local_search.py  quantize.py  quantizer.py
onecomp/quantizer/jointq/core/error_propagation/: local_search_advanced.py
onecomp/quantizer/onebit/: _onebit.py  onebit_impl.py
onecomp/quantizer/qbb/: _qbb.py  qbb_impl.py
onecomp/quantizer/quip/: _quip.py  quant_quip.py  quip_impl.py  utils.py  utils_had.py  vector_balance.py
onecomp/quantizer/rtn/: _rtn.py  rtn_impl.py
onecomp/runner_methods/: chunked_quantization.py  jointq_error_propagation.py  multi_gpu_quantization.py
onecomp/utils/: __init__.py  blockwise.py  calibration.py  device.py  dtype.py  model_inputs.py  perplexity.py  unfuse_moe.py  vram_estimator.py
tests/onecomp/: test_cli.py  test_eval_quantized_vs_dequantized.py  test_make_grouped_module.py  test_qep_general_consistency.py
tests/onecomp/calibration/: test_calibration_data_loader.py
tests/onecomp/fixtures/: generate_qep_gptq_reference.py
tests/onecomp/lpcd/: test_lpcd_config.py  test_lpcd_metrics.py  test_lpcd_runner.py
tests/onecomp/post_process/: test_gptq_block_optimizer.py  test_post_process_lora_sft.py
tests/onecomp/quantizer/: conftest.py  test_module.py
tests/onecomp/quantizer/autobit/: test_autobit.py  test_fused_group_validation.py
tests/onecomp/quantizer/dbf/: test_dbf.py
tests/onecomp/quantizer/gptq/: test_gptq.py  test_gptq_layer_pack.py
tests/onecomp/quantizer/jointq/: regression_quantize_helper.py  test_jointq.py
tests/vllm-plugins/dbf/: test_dbf_gemlite.py
tests/vllm_plugins/gptq/: test_mixed_gptq_e2e.py
vllm_plugins/gptq/: vllm_plugin.py
vllm_plugins/utils/: module.py
