[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "onecomp"
dynamic = ["version"]
description = "Python package for LLM compression"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Keiji Kimura"},
]
requires-python = ">=3.12, <3.14"
keywords = ["llm", "quantization", "compression", "post-training-quantization", "gptq"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Science/Research",
]
dependencies = [
    "transformers >= 5.3.0",
    "accelerate",
    "datasets",
    "lm-eval",
    "primefac",
    "scipy",
    "gemlite>=0.5.1",
    "hqq>=0.2.8",
    "safetensors",
    "ortools>=9.15.6755",
]

[project.urls]
Homepage = "https://github.com/FujitsuResearch/OneCompression"
Documentation = "https://FujitsuResearch.github.io/OneCompression/"
Repository = "https://github.com/FujitsuResearch/OneCompression"
"Bug Tracker" = "https://github.com/FujitsuResearch/OneCompression/issues"
Changelog = "https://github.com/FujitsuResearch/OneCompression/blob/main/CHANGELOG.md"

[project.scripts]
onecomp = "onecomp.cli:main"

[project.optional-dependencies]
cpu = ["torch", "torchvision"]
cu118 = ["torch", "torchvision"]
cu121 = ["torch", "torchvision"]
cu124 = ["torch", "torchvision"]
cu126 = ["torch", "torchvision"]
cu128 = ["torch", "torchvision"]
dev = [
    "black",
    "isort",
    "pre-commit",
    "pylint",
    "pytest",
]
visualize = [
    "matplotlib>=3.10.8",
]
vllm = ["vllm"]
docs = [
    "mkdocs-material",
    "mkdocstrings[python]",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
]

[project.entry-points."vllm.general_plugins"]
dbf = "vllm_plugins.dbf.vllm_plugin:register_vllm_plugin"
mixed_gptq = "vllm_plugins.gptq.vllm_plugin:register_vllm_plugin"

[tool.uv]
conflicts = [
    [{extra = "cpu"}, {extra = "cu118"}, {extra = "cu121"}, {extra = "cu124"}, {extra = "cu126"}, {extra = "cu128"}],
]

[tool.uv.sources]
torch = [
    {index = "pytorch-cpu", extra = "cpu"},
    {index = "pytorch-cu118", extra = "cu118"},
    {index = "pytorch-cu121", extra = "cu121"},
    {index = "pytorch-cu124", extra = "cu124"},
    {index = "pytorch-cu126", extra = "cu126"},
    {index = "pytorch-cu128", extra = "cu128"},
]
torchvision = [
    {index = "pytorch-cpu", extra = "cpu"},
    {index = "pytorch-cu118", extra = "cu118"},
    {index = "pytorch-cu121", extra = "cu121"},
    {index = "pytorch-cu124", extra = "cu124"},
    {index = "pytorch-cu126", extra = "cu126"},
    {index = "pytorch-cu128", extra = "cu128"},
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.extra-build-dependencies]
xformers = ["torch"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.black]
line-length = 99

[tool.isort]
profile = "black"
line_length = 99

[tool.setuptools.dynamic]
version = {attr = "onecomp.__version__.__version__"}

[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
